@@ -322,6 +322,10 @@ It's also possible to use shell like
 .B wildcards
 for the listinst command. Make sure you escape where needed
 
+.TP 
+.B listorphans [\-v|\-vv]
+List installed ports which have no dependent packages
+
 
 
 .TP 
